--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
         set(CMAKE_OSX_ARCHITECTURES x86_64)
     endif()
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    if(CMAKE_SYSTEM_PROCESSOR STREQUAL "arm64")
+    if(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
         message(STATUS "Targeting Linux x86_64")
         ##set(CMAKE_OSX_ARCHITECTURES arm64)
     else()
