Added LogWidget to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ set(SOURCES
     ${PROJECT_SOURCE_DIR}/logging.cpp
     ${PROJECT_SOURCE_DIR}/appwindow.cpp
     ${PROJECT_SOURCE_DIR}/viewportwidget.cpp
+    ${PROJECT_SOURCE_DIR}/logwidget.cpp
 )
 
 # Define resources
