App now uses SceneModels to handle goemetry and render meshes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ set(SOURCES
     ${PROJECT_SOURCE_DIR}/graphics.cpp
     ${PROJECT_SOURCE_DIR}/mesh.cpp
     ${PROJECT_SOURCE_DIR}/rendermesh.cpp
+    ${PROJECT_SOURCE_DIR}/scenemodel.cpp
     ${PROJECT_SOURCE_DIR}/modelloader.cpp
     ${PROJECT_SOURCE_DIR}/collisiongen.cpp
     ${PROJECT_SOURCE_DIR}/appwindow.cpp
