Added ViewportSettingsWidget to project CMake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ set(SOURCES
     ${PROJECT_SOURCE_DIR}/collisiongen.cpp
     ${PROJECT_SOURCE_DIR}/appwindow.cpp
     ${PROJECT_SOURCE_DIR}/viewportwidget.cpp
+    ${PROJECT_SOURCE_DIR}/viewportsettingswidget.cpp
     ${PROJECT_SOURCE_DIR}/viewportcamera.cpp
     ${PROJECT_SOURCE_DIR}/logwidget.cpp
     ${PROJECT_SOURCE_DIR}/propertypanel.cpp
