Implemented simple expander widget

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ set(SOURCES
     ${PROJECT_SOURCE_DIR}/viewportcamera.cpp
     ${PROJECT_SOURCE_DIR}/logwidget.cpp
     ${PROJECT_SOURCE_DIR}/propertypanel.cpp
+    ${PROJECT_SOURCE_DIR}/expanderwidget.cpp
 )
 
 
