--- a/.github/workflows/cmake-archlinux-build.yml
+++ b/.github/workflows/cmake-archlinux-build.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         pacman -Syu --noconfirm
         pacman -S --noconfirm cmake git base-devel qt6-base
-        pacman -S --noconfirm boost cgal qt6 eigen intel-oneapi-tbb
+        pacman -S --noconfirm boost cgal qt6 eigen tbb
 
     - name: Checkout
       uses: actions/checkout@v4
