--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ set(SOURCES
     ${PROJECT_SOURCE_DIR}/graphics.cpp
     ${PROJECT_SOURCE_DIR}/mesh.cpp
     ${PROJECT_SOURCE_DIR}/rendermesh.cpp
+    ${PROJECT_SOURCE_DIR}/gridrendermesh.cpp
     ${PROJECT_SOURCE_DIR}/scenemodel.cpp
     ${PROJECT_SOURCE_DIR}/modelloader.cpp
     ${PROJECT_SOURCE_DIR}/collisiongen.cpp
