Updating windows build test  script

--- a/.github/workflows/test-build-windows.yml
+++ b/.github/workflows/test-build-windows.yml
@@ -10,25 +10,29 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  build-macos:
+  build-windows:
     runs-on: windows-latest
 
     steps:
-    - name: Install dependencies
+    - name: Install VCPKG
       run: |
         git clone https://github.com/microsoft/vcpkg
         .\vcpkg\bootstrap-vcpkg.bat
+        .\vcpkg\vcpkg.exe update
+        echo %CD%\vcpkg >> %GITHUB_PATH%
+      shell: cmd
 
-        set PATH=%PATH%;%CD%\vcpkg
-        vcpkg.exe update
-        vcpkg.exe install boost:x64-windows cgal:x64-windows eigen3:x64-windows python3:x64-windows qtbase:x64-windows python3:x64-windows usd:x64-windows
+    - name: Install dependencies
+      run: vcpkg.exe install boost:x64-windows cgal:x64-windows eigen3:x64-windows python3:x64-windows qtbase:x64-windows usd:x64-windows
+      shell: cmd
 
     - name: Checkout Repository
       uses: actions/checkout@v4
 
-    - name: Run build script
+    - name: Run Build Script
       run: shell\build.bat
+      shell: cmd
 
-    - name: List output
-      run: ls -R build
-
+    - name: List Output
+      run: dir /s build
+      shell: cmd
