--- a/.github/workflows/test-build-windows.yml
+++ b/.github/workflows/test-build-windows.yml
@@ -30,7 +30,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run Build Script
-      run: shell\build.bat
+      run: shell\build-product.bat
       shell: cmd
 
     - name: List Output
